--- a/resilientlinks/firebase.json
+++ b/resilientlinks/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"resilienlink","appId":"1:464804066352:android:758569576673dd57ed29f5","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"resilienlink","configurations":{"android":"1:464804066352:android:758569576673dd57ed29f5"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "resilienlink",
+          "appId": "1:464804066352:android:758569576673dd57ed29f5",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "resilienlink",
+          "configurations": {
+            "android": "1:464804066352:android:758569576673dd57ed29f5"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
